--- a/components/NavBar.module.css
+++ b/components/NavBar.module.css
@@ -2,9 +2,10 @@
   display: flex;
   justify-content: space-between;
   background-color: rgb(0, 0, 41);
+  padding-top: 5px;
 }
 
-.header-div {
+.headerdiv {
   display: flex;
   justify-content: space-evenly;
 }
@@ -12,4 +13,9 @@
 .link {
   color: blueviolet;
   text-decoration: none;
+  margin: 8px;
+}
+
+.logo {
+  color: white;
 }
