--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -8,7 +8,7 @@
     width: 100vw;
     backdrop-filter: blur(5px);
     top: 0;
-    margin-left: 1em;
+    margin: 1em;
 }
 
 .header img {
@@ -20,6 +20,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    margin-right: 1em;
 }
 
 .navigation p {
